--- a/src/static/index.less
+++ b/src/static/index.less
@@ -21,3 +21,27 @@
 @import './responsive';
 @import './theme';
 @import './docsearch';
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 4px;
+  background-color: #f5f5f5;
+}
+
+// 定义滚动条轨道 内阴影+圆角
+::-webkit-scrollbar-track {
+  background: #fff;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(158, 158, 158, 0.7);
+  border-radius: 3px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(158, 158, 158, 1);
+  border-radius: 3px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
